--- a/gb/24/10/10/n14347634.md
+++ b/gb/24/10/10/n14347634.md
@@ -11,13 +11,24 @@
 	<p>【大纪元2024年10月10日讯】（大纪元记者陈霆综合报导）周三（10月9日）晚间，飓风米尔顿（Milton）以三级风暴的强度，正式在佛州登陆，将带来强风、大雨，以及致命的风暴潮。</p>
 <p>美国国家飓风中心表示，米尔顿于美东时间晚间8:30在佛罗里达州西耶斯达岛（Siesta Key）附近登陆，其最大持续风速为每小时120英里。</p>
 <blockquote class="twitter-tweet" data-media-max-width="560">
-<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d1qenr1x5ix28c.cloudfront.net/P8nZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
+<p dir="ltr" lang="en">Major Hurricane Milton has officially made landfall near Siesta Key, FL at 8:30 PM EDT.<ahref="https://t.co/aKfNZ0vOdZ">https://t.co/aKfNZ0vOdZ</a> <ahref="https://t.co/MbCkAd6lOf"></a><a href="https://d2cj9ah31kn8fl.cloudfront.net/H1yZj2zBn"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="MbCkAd6lOf</a></p>
 <p>— NWS Miami (@NWSMiami) <ahref="https://twitter.com/NWSMiami/status/1844179857762287787?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
 <p><a async src="https://platform.twitter.com/widgets.js" charset="utf-8"></a></p>
 <p>“随着米尔顿沿佛罗里达西海岸向内陆移动，危及生命的风暴潮、强风和山洪仍持续发生。”美国国家飓风中心在9点的更新中表示。</p>
 <p>这场风暴将为佛罗里达州海湾沿岸大部分地区带来致命的风暴潮，包括人口稠密的坦帕（Tampa）、圣彼得斯堡（St. Petersburg）、萨拉索塔（Sarasota）和梅尔斯堡（Fort Myers）等地。</p>
 <p>西耶斯达岛在坦帕以南约68英里，是萨拉索塔附近的一座障壁岛（barrier island），拥有白色沙滩，约有5,500名居民。</p>
 <p>米尔顿虽然没有直击坦帕，但仍可能在该地区产生致命的风暴潮和强风。以下为飓风新闻的实时更新。</p>
+<h2>佛州中西部发布山洪紧急预警</h2>
+<p>美国国家气象局（NWS）表示，目前飓风在坦帕以东约45英里（72公里）的米德堡（Fort Meade）附近徘徊，虽然强度略有减弱，但最大持续风速仍高达每小时100英里（160公里）。</p>
+<p>气象局表示，预计飓风将持续东行，直到周四晚间进入大西洋。</p>
+<p>飓风吹袭佛州中西部地区，造成破坏性的强风伴、大雨，气象部门已向佛州中西部部分地区发布了山洪紧急预警（flash flood emergency statement）。该预警通常意味着危及生命的山洪爆发已经发生，或将在不久后发生。</p>
+<h2>泰勒丝捐500万美元协助飓风救灾</h2>
+<p>歌手泰勒丝（Taylor Swift）捐出500万美元，帮助在海伦（Helene）和米尔顿（Milton）飓风中受灾的人们。</p>
+<h2>圣彼得斯堡因水管破裂全城停水</h2>
+<p>因为水管破损，佛州圣彼得斯堡市的官员已在全市范围内暂停供水。</p>
+<p>圣彼得斯堡市在一份新闻稿中表示，当地将于午夜时分开始停水，居民和企业应为停水做好准备，必须等到必要的维修完成后，才会恢复供水。</p>
+<p>该市表示，一旦维修人员可安全地在户外工作，水管维修即会开始。据市政府表示，受影响的地区可能会出现水压降低或中断供水的情况。</p>
+<p>该市提醒，饮用、烹饪和刷牙的用水必须先行煮沸。</p>
 <h2>停电户数激增 已逾200万人断电</h2>
 <p>据PowerOutage.us统计，佛州停电户数剧增，在大约3个小时内，停电的家庭和企业增加了一倍，达到200万户。</p>
 <p>在美东时间晚上9:30左右，仅约110万用电户断电。但目前该数字已超过202万。</p>
@@ -27,7 +38,7 @@
 <p>美国职棒大联盟球队“坦帕湾光芒”（Tampa Bay Rays）的主场是“纯品康纳室内球场”（Tropicana Field）似乎因飓风而严重受损。</p>
 <p>社交平台上流传的影像显示，圆顶建筑屋顶的织物已被撕成碎片。目前尚不清楚体育场内是否有损坏。</p>
 <p>光芒队的球场没有被用作避难所，但根据《坦帕湾时报》报导，它被用作“工人的集结地”，这些工人到此，准备为风暴的破坏处理善后。</p>
-<p dir="ltr" lang="en">The view from our window as we ride out the storm. The roof of Tropicana Field is destroyed by the winds of <ahref="https://twitter.com/hashtag/HurricaneMilton?src=hash&amp;ref_src=twsrc%5Etfw">#HurricaneMilton</a>. Praying for Tampa Bay and all areas affected. Stay safe, everyone <ahref="https://t.co/uy0aNGMAuJ"></a><a href="https://d1qenr1x5ix28c.cloudfront.net/P8nZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uy0aNGMAuJ</a></p>
+<p dir="ltr" lang="en">The view from our window as we ride out the storm. The roof of Tropicana Field is destroyed by the winds of <ahref="https://twitter.com/hashtag/HurricaneMilton?src=hash&amp;ref_src=twsrc%5Etfw">#HurricaneMilton</a>. Praying for Tampa Bay and all areas affected. Stay safe, everyone <ahref="https://t.co/uy0aNGMAuJ"></a><a href="https://d2cj9ah31kn8fl.cloudfront.net/H1yZj2zBn"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="uy0aNGMAuJ</a></p>
 <p>— Dave Moore (@DaveMoore_83) <ahref="https://twitter.com/DaveMoore_83/status/1844210561896296718?ref_src=twsrc%5Etfw">October 10, 2024</a></p></blockquote>
 <h2>风势过大 坦帕市消防局停止紧急服务</h2>
 <p>美国坦帕市消防局长表示，米尔顿飓风风速超过100英里/小时，在强风中行动过于危险，将停止紧急服务，直到救难人员可安全上路为止。</p>
@@ -38,7 +49,7 @@
 <p>白宫表示：“拜登总统和哈里斯副总统收到了政府成员的简报，内容涉及飓风米尔顿的最新预测、对佛州的预期影响，以及正在进行的登陆前准备工作。”</p>
 <p>“拜登总统今晚将就飓风米尔顿向全国发表演说。”白宫表示。</p>
 <p dir="ltr" lang="en">President Biden and Vice President Harris received a briefing today on preparations for Hurricane Milton and the ongoing response to Hurricane Helene.</p>
-<p>We urge everyone in Hurricane Milton’s path to follow all safety instructions as we head into the next 24 hours. <ahref="https://t.co/2S2nGMtGLj"></a><a href="https://d1qenr1x5ix28c.cloudfront.net/P8nZj2zBl"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="2S2nGMtGLj</a></p>
+<p>We urge everyone in Hurricane Milton’s path to follow all safety instructions as we head into the next 24 hours. <ahref="https://t.co/2S2nGMtGLj"></a><a href="https://d2cj9ah31kn8fl.cloudfront.net/H1yZj2zBn"><img width="600" src="https://raw.githubusercontent.com/1992513/www/master/t/ntdtv/twitter.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(twitter视频或图片.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a href="2S2nGMtGLj</a></p>
 <p>— The White House (@WhiteHouse) <ahref="https://twitter.com/WhiteHouse/status/1844154629036159229?ref_src=twsrc%5Etfw">October 9, 2024</a></p></blockquote>
 <h2>佛州马丁县报告多人受伤 数十栋房屋受损</h2>
 <p>佛罗里达州马丁县（Martin County）官员表示，当地已有多人受伤，数十栋房屋受损。</p>
@@ -68,12 +79,12 @@
 	
 
 <strong>相关新闻：</strong>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347653.md#1">受海伦飓风影响 美国北卡州放宽投票规定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347770.md#1">毒贩花招走私毒品 芬太尼藏入生牛肉里</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347633.md#1">贺锦丽未能说明与拜登政策的差异 川普回应</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347702.md#1">20英里限速法在布碌崙开始实行 华埠坚尼路紧跟</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347672.md#1">纽约市府拨款4800万 扩大低收入社区更换铅管计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/10/n14347688.md#1">纽约市警局五分局推在线报警系统 四类案件可在线提交</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2022/05/01/a103414939.md#1" target="_blank">加拿大20市镇升旗亮灯 祝贺法轮大法传世30年</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/2/n11629364.md#1" target="_blank">139号囚犯——红色影星赵丹的凄惨人生</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/30/n11489139.md#1" target="_blank">组图一：法轮功学员欧洲盛大游行 震撼世人</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank">追寻真理 这书讲什么</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/23/n11606736.md#1" target="_blank">林辉：文革天津非法监狱“六十三号”的罪恶</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/30/n7475135.md#1" target="_blank">公安医院院长的晚期胃癌怎么好的？</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/4/n14344260.md#1">《清明上河图》化身乐高模型 打破世界纪录</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/24/10/1/n14341736.md#1">《千字文》——传世奇文，国学瑰宝</a></li>
